# YSDA-Courses

./: README.md
1. AB testing/: final_test_Fedor_Erin.txt  hw_00_Fedor_Erin.py  hw_01_Fedor_Erin.py  hw_02_Fedor_Erin.py  hw_03_Fedor_Erin.py  hw_04_Fedor_Erin.py  hw_05_Fedor_Erin.py  hw_07_Fedor_Erin.py  hw_08_Fedor_Erin.py  notebook.ipynb  seminar_00.ipynb  seminar_01.ipynb  seminar_03_mde.ipynb  seminar_04_strat.ipynb  seminar_06.ipynb  seminar_07.ipynb  seminar_cuped.ipynb
1. Algorithms/: CMakeLists.txt  fast_solution  main.cpp
1. Algorithms/Done-tasks/: 1_A_subseq.cpp  1_C_minmax.cpp  2_B_football.cpp  2_C_mergesorted.cpp  2_E_alibaba.cpp  3_D_kstatistic.cpp  5_D_camel.cpp  6_E_spanningtree.cpp  S_A_rucksack.cpp  S_B_segmentssum.cpp
1. Algorithms/Review/: review_1_football.cpp  review_2_fixedset.h
1. Algorithms/Tests/: stress_test_3_D.cpp  stress_test_for_2_D.cpp
1. ML-1/: Lab_0.ipynb  Lab_1_Fedor_Erin.ipynb  comp_2_Fedor_Erin.ipynb  dota_win_prediction.ipynb  homework_part1_modules.ipynb  homework_part1_modules.py  lab_2_dt_rf_gbdt_Fedor_Erin.ipynb
2. ML-2/: sem1_cv_master.ipynb  sem2_nlp_master_1.ipynb  sem3_dl_tricks_master_1.ipynb  seminar_part1_Ranking.ipynb  seminar_part2_Ranking.ipynb  ysda_2022_03_07_transformers.ipynb
2. Statistics/: hw1_Erin_5-6-7-9.ipynb  hw2_Erin.ipynb  hw3_Erin.ipynb  hw4_Erin.ipynb
3. NLP/: homework_Erin_domain_adaptation.ipynb  homework_Erin_embeddings.ipynb  homework_Erin_transfer_learning.ipynb  homework_part1_Erin_classification.ipynb  homework_part2_Erin_classification.ipynb  practice_Erin_llm.ipynb  (+2 more)
(+198 files in other folders)
